<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <ImageView
        android:id="@+id/img_bg_banner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/spr_gradient_banner"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_centrer_banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_marginBottom="@dimen/pading_10dp"

        app:layout_constraintBottom_toBottomOf="@+id/img_bg_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_bg_banner" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_evn_banner"
        app:layout_constraintBottom_toBottomOf="@id/img_bg_banner"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_bg_banner"
        app:layout_constraintWidth_percent="0.3" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/dp5"
        android:src="@drawable/ic_setup_avata"
        app:layout_constraintBottom_toBottomOf="@id/img_bg_banner"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_bg_banner"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:id="@+id/txt_title_tracuu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp2"
        android:text="Cài đặt"
        android:textColor="@color/White"
        android:textSize="@dimen/txt_22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view_centrer_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ic_setup_guild"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/pading_10dp"
        android:src="@drawable/ic_setup_guild"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_bg_banner"
        app:layout_constraintWidth_percent="0.15" />

    <TextView

        android:id="@+id/txt_setup_guild"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp7"
        android:text="@string/txt_setup_guild"
        android:textColor="@color/blue_introduce"
        android:textSize="@dimen/txt_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ic_setup_guild"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic_setup_guild"
        app:layout_constraintTop_toTopOf="@+id/ic_setup_guild" />

    <ImageView
        android:id="@+id/ic_setup_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/pading_10dp"
        android:src="@drawable/ic_setup_info"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_setup_guild"
        app:layout_constraintWidth_percent="0.15" />

    <TextView

        android:id="@+id/txt_setup_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp7"
        android:text="@string/txt_setup_info"
        android:textColor="@color/blue_introduce"
        android:textSize="@dimen/txt_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ic_setup_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic_setup_info"
        app:layout_constraintTop_toTopOf="@+id/ic_setup_info" />

    <View
        android:id="@+id/view_center"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp3"
        android:layout_marginTop="@dimen/pading_10dp"
        android:layout_marginRight="@dimen/dp3"
        android:background="@color/blue_introduce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_setup_info" />

    <ImageView
        android:id="@+id/ic_setup_change_pass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/pading_10dp"
        android:src="@drawable/ic_setup_change_pass"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_center"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:id="@+id/txt_setup_change_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp7"
        android:text="@string/txt_setup_change_pass"
        android:textColor="@color/blue_introduce"
        android:textSize="@dimen/txt_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ic_setup_change_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic_setup_change_pass"
        app:layout_constraintTop_toTopOf="@+id/ic_setup_change_pass" />
    <ImageView
        android:padding="@dimen/dp5"
        android:id="@+id/ic_setup_logout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/pading_10dp"
        android:src="@drawable/ic_setup_logout"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_setup_change_pass"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:id="@+id/txt_setup_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp7"
        android:text="@string/txt_setup_logout"
        android:textColor="@color/blue_introduce"
        android:textSize="@dimen/txt_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ic_setup_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic_setup_logout"
        app:layout_constraintTop_toTopOf="@+id/ic_setup_logout" />

</android.support.constraint.ConstraintLayout>